# OP_proj2

./: CMakeLists.txt  README.md  config.txt  makefile
include/: configuration.h  log.h  main.h  memory-private.h  memory.h  mesignal.h  metime.h  stats.h  utils.h
src/: client.c  configuration.c  driver.c  log.c  main.c  memory-private.c  memory.c  mesignal.c  metime.c  process.c  restaurant.c  stats.c  synchronization.c  utils.c
